--- a/src/cart/Cart.css
+++ b/src/cart/Cart.css
@@ -1,3 +1,98 @@
 .Cart {
+    width: 70%;
+    margin: 100px auto;
+}
+ul li{
+    list-style: none;
+}
+ul.cartHeader{
+    display: flex;
+    justify-content: space-between;
+}
 
+li.productTab{
+    flex: 0.6;
+    text-align: left;
+}
+li.qtyTab {
+    flex: 0.2;
+    text-align: left;
+    flex-direction: row;
+    margin-top: 10px;
+}
+li.totalTab, li.actionTab {
+    flex: 0.1;
+    text-align: left;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+}
+ul.cartHeader li {
+    font-size: 12px;
+    color: #aaa;
+}
+.cartPage, .cartWrap{
+    display: flex;
+    flex-direction: row;
+
+}
+.cartPage img{
+    width: 70px;
+    height: 70px;
+}
+
+input.qtyType {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    background: #aaa;
+    border: none;
+    padding: 15px;
+}
+a.continueShopping {
+    font-size: 12px;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #333;
+}
+div.qtyBox{
+    float: left;
+}
+div.qtyBtns {
+    width: 23px;
+    height: 18px;
+    display: flex;
+    flex-direction: column;
+
+}
+div.qtyBtns button.second {
+    margin-top: 2px
+}
+.priceTotal, .priceSubtotal {
+    display: flex;
+    justify-content: space-between;
+}
+.cartOverview{
+    width: 40%;
+    float:right;
+    margin-bottom: 20px;
+}
+.cartOverview li {
+    margin-top: 10px;
+    font-size: 12px;
+    color: #aaa;
+}
+.cartOverview li.qtyTab {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 15px;
+}
+.clear {
+    clear: both;
+}
+.crossDelSimple {
+    border: none;
+    background: #fff;
+    font-size: 19px;
+    color: #aaa;
 }
