--- a/src/category/Category.css
+++ b/src/category/Category.css
@@ -1,3 +1,38 @@
 .Category {
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+}
 
+.productsGrid {
+    flex: 0 0 23%;
+    margin-left: 15px;
+}
+
+img {
+    width: 300px;
+    height: 300px;
+}
+.actionButtons {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    position: relative;
+    top: -200px;
+}
+.imageWrap:hover > div.actionButtons{
+    display: flex;
+}
+.action {
+    background: #333;
+    color: #fff;
+    padding: 15px 50px;
+    margin-bottom: 10px;
+}
+.imageWrap {
+    max-height: 300px
 }
